# CustomGifLib

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/blues/giflibrary/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gif.h  native-lib.cpp
app/src/main/cpp/giflib/: dgif_lib.c  gif_err.c  gif_lib.h  gif_lib_private.h  gifalloc.c
app/src/main/java/com/blues/giflibrary/: GifHandle.java  MainActivity.java  SecondActivity.java
app/src/main/res/layout/: activity_main.xml  activity_second.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/blues/giflibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
